* 2013-08-27 - thorben.betten@open-xchange.com

 - Fix for bug 28484: Don't signal reminder(s) for declined calendar events
 - Fix for bug 28538: Using sanitizing URL-encode routine in deferrer bundle (approved by it-sec)
 - Fix for bug 28522: Deal with possibly non-numeric file identifier when handling file storage events in InfoStore module
 - Fix for bug 28523: Unregister MBean with proper ObjectName instance
 - Fix for bug 28459: Avoid duplicate mangling of file storage folder identifiers

* 2013-08-26 - tobias.friedrich@open-xchange.com

 - Fix for bug 28490: Introduced CET- and CEST-aliases for use with iCal4j timezone registry  

* 2013-08-26 - thorben.betten@open-xchange.com

 - Fix for bug 28448: Enhanced CapabilityService to consider relevant contextSets, too
 - Fix for bug 28508: Proper URL-encoding for publication's site name

* 2013-08-23 - thorben.betten@open-xchange.com

 - Fix for bug 28472: Give a meaningful error message to user if login to Google Mail fails
 - Fix for bug 28428: Return up-to-date value for unread/unseen messages
 - Fix for bug 28483: Try to recover from "Content-Type" header with empty parameters

* 2013-08-22 - thorben.betten@open-xchange.com

 - Fix for bug 27095: Don't replace spaces with pluses in servlet's path info
 - Partial fix for 28472: Avoid update attempt for a non-existing subscription

* 2013-08-21 - tobias.friedrich@open-xchange.com

 - Fix for bug 28420: Resolve hostnames before passing them into hazelcast configuration

* 2013-08-21 - thorben.betten@open-xchange.com

 - Fix for bug 28110: User proper SQL statement for updating the transport settings on password transcription
 - Fix for bug 28429: Also consider signaled content length (if available) when checking for a valid image
 - Fix for bug 27413: Enabled to consider X-Forward-Headers to keep the information if a secure connection has been established by client
 - Fix for bug 27428: Consider deferrer service when generating an OAuth call-back URL