@@ -70,6 +70,7 @@ import com.openexchange.caldav.Tools;
 import com.openexchange.calendar.AppointmentDiff;
 import com.openexchange.data.conversion.ical.ConversionError;
 import com.openexchange.data.conversion.ical.ConversionWarning;
+import com.openexchange.data.conversion.ical.ConversionWarning.Code;
 import com.openexchange.data.conversion.ical.ICalEmitter;
 import com.openexchange.data.conversion.ical.ICalSession;
 import com.openexchange.exception.OXException;
@@ -413,6 +414,8 @@ public class AppointmentResource extends CalDAVResource<Appointment> {
             if (null != resourceName && false == resourceName.equals(appointmentToSave.getUid())) {
                 appointmentToSave.setFilename(resourceName);
             }
+        } else {
+            throw new ConversionError(0, Code.INSUFFICIENT_INFORMATION);
         }
     }
 
